manifests/echo-server-secondary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-secondary
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    # Please change your security group id(custom, shared backend)
    alb.ingress.kubernetes.io/security-groups: sg-0d571f4123d5fdf21, sg-0c6df110971c1def0
    # alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-secondary
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-secondary
  namespace: default
spec:
  selector:
    matchLabels:
      app: echoserver-secondary
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-secondary
    spec:
      containers:
      - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        imagePullPolicy: Always
        name: echoserver-secondary
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-secondary
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver-secondary
